Modal z-index fixed.

--- a/vghypeman/src/components/Meet/Meet.css
+++ b/vghypeman/src/components/Meet/Meet.css
@@ -21,6 +21,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 99999999;
 }
 
 .modal {
@@ -29,7 +30,7 @@
   overflow-x: auto;
   display: flex;
   flex-direction: column;
-
+  
 }
 
 .modal::-webkit-scrollbar {
